--- a/ubuntu/install
+++ b/ubuntu/install
@@ -3,26 +3,26 @@ set -eux
 
 FORCE_FLAG=''
 print_usage() {
-  printf "Usage: Only -f(=force) option is allowed."
+    printf "Usage: Only -f(=force) option is allowed."
 }
 while getopts 'f' flag; do
-  case "${flag}" in
-    f) FORCE_FLAG='true' ;;
-    *) print_usage
-       exit 1 ;;
-  esac
+    case "${flag}" in
+        f) FORCE_FLAG='true' ;;
+        *) print_usage
+        exit 1 ;;
+    esac
 done
 
 UBUNTU=$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null 2>&1 && pwd )
 DOTFILES=$( dirname "${UBUNTU}" )
-source "${DOTFILES}/config"
+source "${DOTFILES}/lib/colors"
 
 # packages
 cat "${UBUNTU}/repositories" | grep "^[^#;]" | xargs sudo add-apt-repository -y
 
 if [ ! -z ${FORCE_FLAG} ];then
-  sudo apt update
-  sudo apt upgrade
+    sudo apt update
+    sudo apt upgrade
 fi
 packages=$(mktemp)
 cat "${UBUNTU}/packages" "${UBUNTU}/packages.local" >> ${packages} 2>/dev/null
@@ -38,3 +38,5 @@ source "${DOTFILES}/bin/git/config"
 # VSCode
 VSCODE_USER_SETTING=~/.config/Code/User
 yes | cp -al "${DOTFILES}/bin/vscode/User/". "${VSCODE_USER_SETTING}/"
+
+echo "${GREEN}Packages are successfully installed!!!${NO_COLOR}"
