--- a/macos-dev/install
+++ b/macos-dev/install
@@ -27,6 +27,8 @@ brew update
 brew bundle --file="$MACOS/Brewfile"
 export PATH="/usr/local/opt/coreutils/libexec/gnubin:$PATH"
 
+xattr -r -d com.apple.quarantine /Library/Java/JavaVirtualMachines/graalvm-ce-java8-20.0.0
+
 # shell
 sudo ln -f $MACOS/shell/shells /etc/shells
 chsh -s /bin/zsh
@@ -48,6 +50,7 @@ ZSH_COMPLETIONS="/usr/local/share/zsh-completions"
 mkdir -p "$ZSH_COMPLETIONS"
 yes | cp -afl "$APPLICATIONS/shell/zsh/completion/"_* "$ZSH_COMPLETIONS/"
 
+. "$HOME/.zshenv"
 
 # env
 yes | anyenv install --init || :
@@ -104,6 +107,16 @@ mkdir -p "$GOPATH"
 # haskell
 command -v ghcup 1>/dev/null 2>&1 || curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | sh
 
+# jvm
+if [ ! -z ${FORCE_FLAG} ] || [ ! -s "$HOME/.sdkman/bin/sdkman-init.sh" ];then
+    curl -s "https://get.sdkman.io" | bash
+    export SDKMAN_DIR="$HOME/.sdkman"
+    source "$HOME/.sdkman/bin/sdkman-init.sh"
+    sdk install java 8.0.222.j9-adpt
+    sdk install java 12.0.1.j9-adpt
+fi
+gu install native-image
+
 # nvm
 export NVM_DIR="$HOME/.nvm"
 if [ ! -z ${FORCE_FLAG} ] || [ ! -d ${NVM_DIR} ];then
@@ -126,14 +139,6 @@ tsc -h >/dev/null 2>&1 || npm install -g typescript
 ONEDRIVE_SYNC_DIR=$HOME/OneDrive\ -\ $(whoami)
 mkdir -p "${ONEDRIVE_SYNC_DIR}/Images/Screenshots/$(uname -n)"
 defaults write com.apple.screencapture location "${ONEDRIVE_SYNC_DIR}/Images/Screenshots/$(uname -n)"
-
-if [ ! -z ${FORCE_FLAG} ] || [ ! -s "$HOME/.sdkman/bin/sdkman-init.sh" ];then
-    curl -s "https://get.sdkman.io" | bash
-    export SDKMAN_DIR="$HOME/.sdkman"
-    source "$HOME/.sdkman/bin/sdkman-init.sh"
-    sdk install java 8.0.222.j9-adpt
-    sdk install java 12.0.1.j9-adpt
-fi
 
 # tmux
 ln -f "$APPLICATIONS/tmux/.tmux.conf" $HOME/.tmux.conf
