about native-image

--- a/macos-dev/install
+++ b/macos-dev/install
@@ -115,7 +115,7 @@ if [ ! -z ${FORCE_FLAG} ] || [ ! -s "$HOME/.sdkman/bin/sdkman-init.sh" ];then
     sdk install java 8.0.222.j9-adpt
     sdk install java 12.0.1.j9-adpt
 fi
-gu install native-image
+/Library/Java/JavaVirtualMachines/graalvm-ce-java8-20.0.0/Contents/Home/bin/gu install native-image
 
 # nvm
 export NVM_DIR="$HOME/.nvm"
