--- a/macos-dev/install
+++ b/macos-dev/install
@@ -146,6 +146,7 @@ tsc -h >/dev/null 2>&1 || npm install -g typescript
 create-react-app 2>&1 || npm i -g create-react-app
 refmt -h >/dev/null 2>&1 || npm uninstall -g reason-cli
 bsb -h >/dev/null 2>&1 || npm install -g bs-platform
+amplify -h >/dev/null 2>&1 || npm install -g @aws-amplify/cli
 
 # OneDrive
 HOST_NAME=$(uname -n)
