--- a/macos-dev/install
+++ b/macos-dev/install
@@ -27,10 +27,6 @@ brew update
 brew bundle --file="$MACOS/Brewfile"
 export PATH="/usr/local/opt/coreutils/libexec/gnubin:$PATH"
 
-GRAALVM_VERSION=$(brew cask list --versions | grep "graalvm-ce-java8" | awk '{print $2}')
-xattr -r -d com.apple.quarantine "/Library/Java/JavaVirtualMachines/graalvm-ce-java8-$GRAALVM_VERSION"
-sudo ln -fs "/Library/Java/JavaVirtualMachines/graalvm-ce-java8-$GRAALVM_VERSION" "/Library/Java/JavaVirtualMachines/graalvm-ce-java8-latest"
-
 # shell
 if [ ! -z ${FORCE_FLAG} ];then
     sudo ln -f $MACOS/shell/shells /etc/shells
@@ -119,7 +115,13 @@ if [ ! -z ${FORCE_FLAG} ] || [ ! -s "$HOME/.sdkman/bin/sdkman-init.sh" ];then
     sdk install java 8.0.222.j9-adpt
     sdk install java 12.0.1.j9-adpt
 fi
-"/Library/Java/JavaVirtualMachines/graalvm-ce-java8-$GRAALVM_VERSION/Contents/Home/bin/gu" install native-image
+CURRENT_GRAALVM_8_VERSION=$(readlink "/Library/Java/JavaVirtualMachines/graalvm-ce-java8-latest" | awk -F '-' '{print $4}' || ehco "")
+LATEST_GRAALVM_8_VERSION=$(brew cask list --versions | grep "graalvm-ce-java8" | awk '{print $2}')
+if [ $CURRENT_GRAALVM_8_VERSION != $LATEST_GRAALVM_8_VERSION ];then
+    xattr -r -d com.apple.quarantine "/Library/Java/JavaVirtualMachines/graalvm-ce-java8-$LATEST_GRAALVM_8_VERSION"
+    sudo ln -fs "/Library/Java/JavaVirtualMachines/graalvm-ce-java8-$LATEST_GRAALVM_8_VERSION" "/Library/Java/JavaVirtualMachines/graalvm-ce-java8-latest"
+fi
+"/Library/Java/JavaVirtualMachines/graalvm-ce-java8-latest/Contents/Home/bin/gu" install native-image
 
 # karabiner
 KARABINER_DIR="$HOME/.config/karabiner"
