--- a/macos-dev/install
+++ b/macos-dev/install
@@ -58,6 +58,10 @@ anyenv install nodenv -s
 anyenv install pyenv -s
 anyenv install rbenv -s
 eval "$(anyenv init -)"
+ANYENV_PLUGINS=$(anyenv root)/plugins
+mkdir -p "$ANYENV_PLUGINS"
+git -C "$ANYENV_PLUGINS/anyenv-update" pull || git clone https://github.com/znz/anyenv-update.git "$ANYENV_PLUGINS/anyenv-update"
+anyenv update
 
 # node
 NODE12=12.16.0
