--- a/macos-dev/install
+++ b/macos-dev/install
@@ -83,7 +83,7 @@ rbenv install -s $RUBY2_6
 rbenv global $RUBY2_6
 bundler -h >/dev/null 2>&1 || sudo gem install bundler
 gem specific_install -h >/dev/null 2>&1 || sudo gem install specific_install
-t -h >/dev/null 2>&1 || sudo gem specific_install http://github.com/hiroga-cc/t.git
+t -h >/dev/null 2>&1 || sudo gem specific_install http://github.com/xhiroga/t.git
 
 # aws
 AWS_CLI="$HOME/.aws/cli"
