--- a/macos-dev/install
+++ b/macos-dev/install
@@ -156,6 +156,8 @@ create-react-app -h 2>&1 || npm i -g create-react-app
 refmt -h >/dev/null 2>&1 || npm uninstall -g reason-cli
 bsb -h >/dev/null 2>&1 || npm install -g bs-platform
 amplify -h >/dev/null 2>&1 || npm install -g @aws-amplify/cli
+yo --help >/dev/null 2>&1 || npm install -g yo generator-code
+vsce -h >/dev/null 2>&1 || npm install -g vsce
 
 # OneDrive
 HOST_NAME=$(uname -n)
