fix: screenshot in small letter

--- a/macos-dev/install
+++ b/macos-dev/install
@@ -167,7 +167,7 @@ HOST_NAME=$(uname -n)
 MACHINE_NAME=${HOST_NAME%%.*}       # remove network name after .(dot)
 ONEDRIVE_DIR=$HOME/OneDrive\ -\ $(whoami)
 mkdir -p "${ONEDRIVE_DIR}/Images/Screenshots/$MACHINE_NAME"
-defaults write com.apple.screencapture location "${ONEDRIVE_DIR}/Images/Screenshots/$MACHINE_NAME"
+defaults write com.apple.screencapture location "${ONEDRIVE_DIR}/screenshots/$MACHINE_NAME"
 
 # tmux
 ln -f "$APPLICATIONS/tmux/.tmux.conf" $HOME/.tmux.conf
