--- a/macos-dev/install
+++ b/macos-dev/install
@@ -17,7 +17,7 @@ done
 MACOS=$( cd "$( dirname "$0" )" >/dev/null 2>&1 && pwd )
 DOTFILES=$( dirname "$MACOS" )
 . "$DOTFILES/lib/colors"
-APPLICATIONS="$DOTFILES/bin"
+APPLICATIONS="$DOTFILES/applications"
 
 # System Prefernce
 source "$APPLICATIONS/macos/.macos"
